# Surelog

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  0001-chipsalliance-Surelog-3670.patch  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  HEADER  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  shell.nix
SVIncCompil/: CMakeLists.txt  Makefile  README  README.md  build3rdparty.sh  build3rdparty_mini.sh  buildall.sh  buildantlr.sh  buildantlr_mini.sh  buildccache.sh  builddebug.sh  buildflatbuffer.sh  buildpp.sh  buildpython.sh  buildrelease.sh  buildreleasepp.sh  main.cpp  release.tcl
SVIncCompil/API/: PythonAPI.cpp  PythonAPI.h  SLAPI.cpp  SLAPI.h  SV3_1aPythonListener.cpp  SV3_1aPythonListener.h  extract_vpi.tcl  slSV3_1aPythonListener.py  slapi.h  slapi.i  slapi.py  slapi_wrap.cxx  vobjecttypes.py  vobjecttypes_py.h  yosys.tcl
SVIncCompil/Cache/: Cache.cpp  Cache.h  PPCache.cpp  PPCache.h  ParseCache.cpp  ParseCache.h  PythonAPICache.cpp  PythonAPICache.h  build_fbs.sh  header.fbs  header_generated.h  parser.fbs  parser_generated.h  preproc.fbs  preproc_generated.h  python_api_generated.h
SVIncCompil/CommandLine/: CommandLineParser.cpp  CommandLineParser.hpp
SVIncCompil/Common/: ClockingBlockHolder.cpp  ClockingBlockHolder.h
SVIncCompil/Config/: Config.cpp  Config.h  ConfigSet.cpp  ConfigSet.h
SVIncCompil/Design/: ClockingBlock.cpp  ClockingBlock.h  DataType.cpp  DataType.h  DefParam.cpp  DefParam.h  Design.cpp  Design.h  DesignComponent.cpp  DesignComponent.h  DesignElement.cpp  DesignElement.h  Enum.cpp  Enum.h  FileCNodeId.h  FileContent.cpp  FileContent.h  Function.cpp  Function.h  Instance.cpp  Instance.h  ModuleDefinition.cpp  ModuleDefinition.h  ModuleInstance.cpp  ModuleInstance.h  Parameter.cpp  Parameter.h  Scope.cpp  Scope.h  Signal.cpp  Signal.h  Statement.cpp  Statement.h  Task.cpp  Task.h  TfPortItem.cpp  TfPortItem.h  TimeInfo.cpp  TimeInfo.h  VObject.cpp  (+3 more)
SVIncCompil/DesignCompile/: Builtin.cpp  Builtin.h  CompileClass.cpp  CompileClass.h  CompileDesign.cpp  CompileDesign.h  CompileFileContent.cpp  CompileFileContent.h  CompileHelper.cpp  CompileHelper.h  CompileModule.cpp  CompileModule.h  CompilePackage.cpp  CompilePackage.h  CompileProgram.cpp  CompileProgram.h  CompileStep.cpp  CompileStep.h  CompileToolbox.cpp  CompileToolbox.h  DesignElaboration.cpp  DesignElaboration.h  ElaborationStep.cpp  ElaborationStep.h  PackageAndRootElaboration.cpp  PackageAndRootElaboration.h  ResolveSymbols.cpp  ResolveSymbols.h  TestbenchElaboration.cpp  TestbenchElaboration.h  UVMElaboration.cpp  UVMElaboration.h
SVIncCompil/ErrorReporting/: Error.cpp  Error.h  ErrorContainer.cpp  ErrorContainer.h  ErrorDefinition.cpp  ErrorDefinition.h  Location.cpp  Location.h  Report.cpp  Report.h  Waiver.cpp  Waiver.h
SVIncCompil/Expression/: Expr.cpp  Expr.h  ExprBuilder.cpp  ExprBuilder.h  Value.cpp  Value.h
SVIncCompil/Package/: Package.cpp  Package.h  Precompiled.cpp  Precompiled.h
SVIncCompil/SourceCompile/: AnalyzeFile.cpp  AnalyzeFile.h  AntlrParserErrorListener.cpp  AntlrParserErrorListener.h  AntlrParserHandler.cpp  AntlrParserHandler.h  CheckCompile.cpp  CheckCompile.h  CompilationUnit.cpp  CompilationUnit.h  CompileSourceFile.cpp  CompileSourceFile.h  Compiler.cpp  Compiler.h  IncludeFileInfo.h  LoopCheck.cpp  LoopCheck.h  MacroInfo.cpp  MacroInfo.h  ParseFile.cpp  ParseFile.h  PreprocessFile.cpp  PreprocessFile.h  PythonListen.cpp  PythonListen.h  SV3_1aPpTreeShapeListener.cpp  SV3_1aPpTreeShapeListener.h  SV3_1aTreeShapeHelper.cpp  SV3_1aTreeShapeHelper.h  SV3_1aTreeShapeListener.cpp  SV3_1aTreeShapeListener.h  SymbolTable.cpp  SymbolTable.h  VObjectTypes.cpp  VObjectTypes.h
SVIncCompil/Testbench/: ClassDefinition.cpp  ClassDefinition.h  ClassObject.cpp  ClassObject.h  Constraint.cpp  Constraint.h  CoverGroupDefinition.cpp  CoverGroupDefinition.h  FunctionMethod.cpp  FunctionMethod.h  Program.cpp  Program.h  Property.cpp  Property.h  TaskMethod.cpp  TaskMethod.h  TypeDef.cpp  TypeDef.h  Variable.cpp  Variable.h
SVIncCompil/Testcases/: regression.tcl
SVIncCompil/Testcases/AVLMM/: test_program.sv
SVIncCompil/Testcases/AmiqSimpleTestSuite/: amiq_svaunit_ex_simple_test_unit.sv
SVIncCompil/Testcases/BeginKeywords/: top.v
SVIncCompil/Testcases/ClassCons/: definesPkg.pkg
SVIncCompil/Testcases/Custom_FIR_DMA/: altpllpll.v  altpllpll_bb.v  cpu_test_bench.v  custom_dma_burst_1.v  ddr_sdram_auk_ddr_clk_gen.v  fir_dma.v  pll.v  sysid.v  timestamp_timer.v
SVIncCompil/Testcases/Driver/: design.sv
SVIncCompil/Testcases/LibraryIntercon/: cmp.sv  lib.map
SVIncCompil/Testcases/Monitor/: testbench.sv
SVIncCompil/Testcases/OVMSwitch/: Environment.sv  Scoreboard.sv  Sequencer.sv  interface.sv  top.sv
SVIncCompil/Testcases/RiscV/: LICENSE
SVIncCompil/Testcases/SVSwitch/: Coverage.sv  (+2 more)
SVIncCompil/Utils/: FileUtils.cpp  FileUtils.h  HashMap.h  ParseUtils.cpp  ParseUtils.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h
SVIncCompil/nbproject/: Makefile-AdvancedDebug.mk  Makefile-Debug.mk  Makefile-Release.mk  Makefile-ReleaseNoTcMalloc.mk  Makefile-impl.mk  Makefile-variables.mk  Package-AdvancedDebug.bash  Package-Debug.bash  Package-Release.bash  Package-ReleaseNoTcMalloc.bash  configurations.xml  launcher.properties  licenseheader.txt  project.properties  project.xml
SVIncCompil/parser/: SV3_1aLexer.cpp  SV3_1aLexer.h  SV3_1aLexer.tokens  SV3_1aParser.cpp  SV3_1aParser.h  SV3_1aParserBaseListener.cpp  SV3_1aParserBaseListener.h  SV3_1aParserListener.cpp  SV3_1aParserListener.h  SV3_1aPpLexer.cpp  SV3_1aPpLexer.h  SV3_1aPpParser.cpp  SV3_1aPpParser.h  SV3_1aPpParserBaseListener.cpp  SV3_1aPpParserBaseListener.h  SV3_1aPpParserListener.cpp  SV3_1aPpParserListener.h  SV3_1aSplitterLexer.cpp  SV3_1aSplitterLexer.h  SV3_1aSplitterParser.cpp  SV3_1aSplitterParser.h  SV3_1aSplitterParserBaseListener.cpp  SV3_1aSplitterParserBaseListener.h  SV3_1aSplitterParserListener.cpp  SV3_1aSplitterParserListener.h
deploy/: CMakeLists.txt
tests/TestInstall/: CMakeLists.txt  Makefile
(+6236 files in other folders)
